--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@ducanh2912/next-pwa": "^10.2.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-slot": "^1.0.2",
     "@supabase/supabase-js": "^2.39.2",
     "bwip-js": "^4.2.0",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.0",
+    "cmdk": "^0.2.0",
     "cookies-next": "^4.1.0",
     "jotai": "^2.6.1",
     "lottie-react": "^2.4.0",
