--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@supabase/supabase-js": "^2.39.2",
+    "@zxing/library": "^0.20.0",
     "bwip-js": "^4.2.0",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
@@ -33,7 +34,8 @@
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "use-local-storage-state": "^19.1.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "zxing-js-library": "^0.20.1"
   },
   "devDependencies": {
     "@swc-jotai/react-refresh": "^0.1.0",
