--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@supabase/supabase-js": "^2.39.2",
+    "@vercel/analytics": "^1.2.2",
     "@zxing/library": "^0.20.0",
     "bwip-js": "^4.2.0",
     "class-variance-authority": "^0.7.0",
@@ -22,9 +23,11 @@
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
     "cookies-next": "^4.1.0",
+    "input-otp": "^1.2.2",
     "jotai": "^2.6.1",
     "lottie-react": "^2.4.0",
     "next": "14.0.4",
+    "node-2fa": "^2.0.3",
     "react": "^18",
     "react-dom": "^18",
     "react-reader": "^2.0.4",
@@ -33,6 +36,7 @@
     "tailwind-hamburgers": "^1.3.5",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "twilio": "^5.0.1",
     "use-local-storage-state": "^19.1.0",
     "uuid": "^9.0.1",
     "zxing-js-library": "^0.20.1"
